css fix on slidebox image overlap
css fix on slidebox image overlap

--- a/client/scss/photo.scss
+++ b/client/scss/photo.scss
@@ -9,6 +9,7 @@
     bottom: 0;
     transition: .7s background linear;
   }
+  background-color:$light;
 }
 
 .resp-slider-height {
